test_regress/t/t_randsequence_rs_bad.out
%Error-UNSUPPORTED: t/t_randsequence_rs_bad.v:12:5: Unsupported: randsequence
   12 |     randsequence()
      |     ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randsequence_rs_bad.v:14:10: Unsupported: randsequence
   14 |          randsequence()
      |          ^~~~~~~~~~~~
%Error: Exiting due to
